# promptly

./: .gitignore  DESIGN.md  Makefile  README.md  TUTORIAL.md  pyproject.toml
examples/: advanced_usage.py  basic_usage.py  tutorial_demo.py
prompts/components/: base_skills.md
prompts/developers/: airtable.md  n8n_airtable.md
src/promptly/: __init__.py  loader.py
src/promptly/prompts/components/: base_skills.md  communication.md
src/promptly/prompts/developers/: airtable.md  n8n.md  n8n_airtable.md  python.md  supabase.md  typescript-supabase-integration.md  typescript.md
src/promptly/prompts/tasks/: code_review.md
tests/: __init__.py  test_loader.py
